logs/iktomi.cms.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/iktomi'...
Listing './lib/python3.5/site-packages/iktomi/cms'...
Listing './lib/python3.5/site-packages/iktomi/cms/auth'...
Listing './lib/python3.5/site-packages/iktomi/cms/edit_log'...
Listing './lib/python3.5/site-packages/iktomi/cms/editor_notes'...
Listing './lib/python3.5/site-packages/iktomi/cms/forms'...
Listing './lib/python3.5/site-packages/iktomi/cms/item_lock'...
Compiling './lib/python3.5/site-packages/iktomi/cms/item_lock/base.py'...
***   File "./lib/python3.5/site-packages/iktomi/cms/item_lock/base.py", line 129
    except ModelLockedByOther, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iktomi/cms/item_lock/views.py'...
***   File "./lib/python3.5/site-packages/iktomi/cms/item_lock/views.py", line 34
    except ModelLockError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iktomi/cms/models'...
Listing './lib/python3.5/site-packages/iktomi/cms/publishing'...
Listing './lib/python3.5/site-packages/iktomi/cms/static'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/css'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/images'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/images/languages'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/images/popup'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/js'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/js/lib'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/js/presave'...
Listing './lib/python3.5/site-packages/iktomi/cms/static/js/widgets'...
Compiling './lib/python3.5/site-packages/iktomi/cms/stream_handlers.py'...
***   File "./lib/python3.5/site-packages/iktomi/cms/stream_handlers.py", line 432
    except ModelLockError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iktomi/cms/stream_sortables.py'...
***   File "./lib/python3.5/site-packages/iktomi/cms/stream_sortables.py", line 67
    except ModelLockedByOther, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/iktomi/cms/templates'...
Listing './lib/python3.5/site-packages/iktomi/cms/templates/edit_log'...
Listing './lib/python3.5/site-packages/iktomi/cms/templates/forms'...
Listing './lib/python3.5/site-packages/iktomi/cms/templates/forms/widgets'...
Listing './lib/python3.5/site-packages/iktomi/cms/templates/macros'...
Listing './lib/python3.5/site-packages/iktomi/cms/templates/menu'...
Listing './lib/python3.5/site-packages/iktomi/cms/templates/widgets'...
Listing './lib/python3.5/site-packages/iktomi/cms/templates/widgets/wysihtml5'...
Listing './lib/python3.5/site-packages/iktomi/cms/tray'...
Listing './lib/python3.5/site-packages/iktomi.cms-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
